--- a/OCBJackpotHub/WebApp/Index.html
+++ b/OCBJackpotHub/WebApp/Index.html
@@ -139,6 +139,7 @@
             $('#message').focus();
             // Start the connection.
             $.connection.hub.start().done(function () {
+                chat.server.hello();
                 $('#sendmessage').click(function () {
                     // Call the Send method on the hub.
                     chat.server.send($('#displayname').val(), $('#message').val());
