--- a/OCBJackpotHub/WebApp/Index.html
+++ b/OCBJackpotHub/WebApp/Index.html
@@ -184,7 +184,14 @@
             opacity: 0.5;
             margin-top: 105px;
         }
+        .top-header{
+            width: 100%;
+        }
 
+        .top-header img {
+            margin: 0 auto;
+            margin-top: 2rem;
+        }
 
     </style>
 </head>
@@ -230,6 +237,10 @@
     </div>
 
     <div class="main">
+        <div class="row top-header">
+            <img src="img/top-logo.png" />
+        </div>
+
         <div class="panel panel-primary">
             <div class="panel-body">
 
@@ -276,9 +287,8 @@
             </div>
         </div>
 
-        <img class="person" src="img/person.png" />
+        <!--<img class="person" src="img/person.png" />-->
         <img class="phone-omni" src="img/phone-omni.png" />
-        <img class="app" src="img/app.png" />
         <img class="congrat" src="img/congrat.gif" />
     </div>
     <div id="example" align="center" style="width: 100%; height: 100%;">
@@ -313,7 +323,6 @@
         var sound = new Audio('ringtones/spinning.mp3');
         var ding = new Audio('ringtones/ding.wav');
         var win = new Audio('ringtones/win.mp3');
-        var introvideo = new HTMLVideoElement('img/intro.mp4')
         // Loop of playing sound
         sound.addEventListener('ended', function () {
             this.currentTime = 0;
