--- a/OCBJackpotHub/WebApp/draw.html
+++ b/OCBJackpotHub/WebApp/draw.html
@@ -212,53 +212,58 @@
         <div class="row top-header">
             <img src="img/top-logo.png" />
         </div>
-
-        <div class="panel panel-primary">
-            <div class="panel-body">
-
-                <div class="slotwrapper" id="example2">
-                    <ul>
-                        <li>0</li>
-                        <li>1</li>
-                        <li>2</li>
-                        <li>3</li>
-                        <li>4</li>
-                        <li>5</li>
-                        <li>6</li>
-                        <li>7</li>
-                        <li>8</li>
-                        <li>9</li>
-
-                    </ul>
-                    <ul>
-                        <li>0</li>
-                        <li>1</li>
-                        <li>2</li>
-                        <li>3</li>
-                        <li>4</li>
-                        <li>5</li>
-                        <li>6</li>
-                        <li>7</li>
-                        <li>8</li>
-                        <li>9</li>
-                    </ul>
-                    <ul>
-                        <li>0</li>
-                        <li>1</li>
-                        <li>2</li>
-                        <li>3</li>
-                        <li>4</li>
-                        <li>5</li>
-                        <li>6</li>
-                        <li>7</li>
-                        <li>8</li>
-                        <li>9</li>
-                    </ul>
-                </div>
-
-            </div>
+        <div class="row" style="min-height: 100px;">
+            <h3 class="congrat">CHÚC MỪNG</h3>
         </div>
+        <div class="row">
 
+            <div class="panel panel-primary">
+                <div class="panel-body">
+
+                    <div class="slotwrapper" id="example2">
+                        <ul>
+                            <li>0</li>
+                            <li>1</li>
+                            <li>2</li>
+                            <li>3</li>
+                            <li>4</li>
+                            <li>5</li>
+                            <li>6</li>
+                            <li>7</li>
+                            <li>8</li>
+                            <li>9</li>
+
+                        </ul>
+                        <ul>
+                            <li>0</li>
+                            <li>1</li>
+                            <li>2</li>
+                            <li>3</li>
+                            <li>4</li>
+                            <li>5</li>
+                            <li>6</li>
+                            <li>7</li>
+                            <li>8</li>
+                            <li>9</li>
+                        </ul>
+                        <ul>
+                            <li>0</li>
+                            <li>1</li>
+                            <li>2</li>
+                            <li>3</li>
+                            <li>4</li>
+                            <li>5</li>
+                            <li>6</li>
+                            <li>7</li>
+                            <li>8</li>
+                            <li>9</li>
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
         <!--<img class="person" src="img/person.png" />-->
         <img class="phone-omni" src="img/phone-omni.png" />
         <h3 class="congrat">CHÚC MỪNG</h3>
